--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +31,7 @@
                 <a href="#projects" class="nav-link">Projects</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <a href="#" class="nav-link" id="resume-download">Resume</a>
+                <a href="assets/Kartik_Virmani_Resume.pdf" class="nav-link" download>Resume</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <span class="bar"></span>
