--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </div>
                 
                 <!-- NeRF -->
-                <div class="project-card clickable-card fade-in" onclick="window.open('https:https://github.com/virmani11kartik/learning-in-robotics-6500/blob/main/Policy%20Iteration%2C%20SLAM%20and%20NeRF/NerF/6500_3_3.ipynb','_blank')">
+                <div class="project-card clickable-card fade-in" onclick="window.open('https:https://github.com/virmani11kartik/learning-in-robotics-6500/blob/main/Policy%20Iteration%2C%20SLAM%20and%20NeRF/NerF','_blank')">
                     <div class="project-header">
                         <h3>Neural Radiance Fields (NeRF)</h3>
                     </div>
