--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
         <div class="container">
             <h2 class="section-title fade-in">Projects</h2>
             <div class="projects-grid">
-                <!-- F1/10th Autonomous Vehicle Racing -->
-                <div class="project-card clickable-card fade-in" onclick="window.open('https://github.com/virmani11kartik/mppi_f1tenth_team4','_blank')">
+                <!-- HAMR -->
+                <div class="project-card clickable-card fade-in" onclick="window.open('https:https://github.com/cedrichld/hamr_holonomic_robot/tree/kartik','_blank')">
                     <div class="project-header">
-                        <h3>F1/10th Autonomous Vehicle Racing</h3>
+                        <h3>HAMR Holonomic Robot</h3>
                     </div>
-                    <p>Built a full-stack ROS 2 autonomy pipeline integrating navigation, SLAM, motion planning (RRT, Pure Pursuit, MPC), and perception with LiDAR/IMU/RealSense.</p>
+                    <p>Built a full-stack ROS 2 autonomy pipeline integrating,Localization navigation, motion planning (RRT, Pure Pursuit, MPC).</p>
                     <div class="project-tech">
                         <span class="tech-tag">ROS 2</span>
                         <span class="tech-tag">C++</span>
