--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h2 class="section-title fade-in">Projects</h2>
             <div class="projects-grid">
                 <!-- HAMR -->
-                <div class="project-card clickable-card fade-in" onclick="window.open('https:https://github.com/cedrichld/hamr_holonomic_robot/tree/kartik','_blank')">
+                <div class="project-card clickable-card fade-in" onclick="window.open('https:https:https://github.com/virmani11kartik/HAMR_Humanoid','_blank')">
                     <div class="project-header">
                         <h3>HAMR Holonomic Robot</h3>
                     </div>
