--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="X:\kvirmanirobotics.github.io\assets\grasp_logo1_blue.png" alt="Penn Engineering">
+                <img src="/assets/grasp_logo1_blue.png" alt="Penn Engineering">" alt="Penn Engineering">
                 <h2>Kartik Virmani</h2>
             </div>
             <div class="nav-menu" id="nav-menu">
