--- a/index.html
+++ b/index.html
@@ -44,31 +44,39 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-container">
-            <div class="hero-content fade-in">
-                <h1 class="hero-title">Kartik Virmani</h1>
-                <h2 class="hero-subtitle">Robotics Engineer & Research Assistant</h2>
-                <p class="hero-description">
-                    MS in Mechanical Engineering & Applied Mechanics at University of Pennsylvania,
-                    specializing in Mechatronics, Robotics, and Autonomous Systems
-                </p>
-                <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                    <a href="#projects" class="btn btn-secondary">View Projects</a>
+    <div class="hero-container">
+        <div class="hero-content fade-in">
+            <div class="hero-profile">
+                <div class="profile-image">
+                    <img src="assets/Profile1.jpg" alt="Kartik Virmani" class="profile-img">
+                    <div class="profile-ring"></div>
                 </div>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/kartik-virmani-1a5282170" target="_blank" aria-label="LinkedIn">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                    <a href="https://github.com/virmani11kartik" target="_blank" aria-label="GitHub">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.researchgate.net/profile/Kartik_Virmani" target="_blank" aria-label="ResearchGate">
-                        <i class="fab fa-researchgate"></i>
-                    </a>
+                <div class="hero-text">
+                    <h1 class="hero-title">Kartik Virmani</h1>
+                    <h2 class="hero-subtitle">Robotics Engineer & Research Assistant</h2>
                 </div>
             </div>
+            <p class="hero-description">
+                MS in Mechanical Engineering & Applied Mechanics at University of Pennsylvania,
+                specializing in Mechatronics, Robotics, and Autonomous Systems
+            </p>
+            <div class="hero-buttons">
+                <a href="#contact" class="btn btn-primary">Get In Touch</a>
+                <a href="#projects" class="btn btn-secondary">View Projects</a>
+            </div>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/kartik-virmani-1a5282170" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/virmani11kartik" target="_blank" aria-label="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.researchgate.net/profile/Kartik_Virmani" target="_blank" aria-label="ResearchGate">
+                    <i class="fab fa-researchgate"></i>
+                </a>
+            </div>
         </div>
+    </div>
     </section>
 
     <!-- About Section -->
