--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="hero-content fade-in">
             <div class="hero-profile">
                 <div class="profile-image">
-                    <img src="assets/Profile1-modified.png" alt="Kartik Virmani" class="profile-img">
+                    <img src="assets/Profile1-modified.jpg" alt="Kartik Virmani" class="profile-img">
                     <div class="profile-ring"></div>
                 </div>
                 <div class="hero-text">
