--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Kartik Virmani — Robotics Engineer" />
   <meta property="og:description" content="ROS 2, autonomous systems, motion planning, and perception." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/Profile1-modified.jpg" />
+  <meta property="og:image" content="assets/Profile1.jpeg" />
   <meta property="og:url" content="https://your-domain.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -28,7 +28,7 @@
     "@type": "Person",
     "name": "Kartik Virmani",
     "url": "https://your-domain.com/",
-    "image": "https://your-domain.com/assets/Profile1-modified.jpg",
+    "image": "https://your-domain.com/assets/Profile1.jpeg",
     "jobTitle": "Robotics Engineer",
     "email": "mailto:kvirmani@seas.upenn.edu",
     "telephone": "+12154528308",
@@ -86,7 +86,7 @@
         <div class="hero-content fade-in">
             <div class="hero-profile">
                 <div class="profile-image">
-                    <img src="assets/Profile1-modified.png" alt="Kartik Virmani" class="profile-img">
+                    <img src="assets/Profile1.jpeg" alt="Kartik Virmani" class="profile-img">
                     <div class="profile-ring"></div>
                 </div>
                 <div class="hero-text">
