--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
       </div>
 
-      <!-- RL & MuJoCo -->
+      <!-- RL & MuJoCo
       <div class="project-card clickable-card fade-in"
            onclick="window.open('https://github.com/virmani11kartik/learning-in-robotics-6500/tree/main/Biped%20RL','_blank')">
         <div class="project-header">
@@ -352,7 +352,7 @@
           <span class="tech-tag">MPC</span>
           <span class="tech-tag">PPO</span>
         </div>
-      </div>
+      </div> -->
 
       <!-- UKF State Estimation -->
       <div class="project-card clickable-card fade-in"
@@ -372,12 +372,12 @@
 
       <!-- NeRF -->
       <div class="project-card clickable-card fade-in"
-           onclick="window.open('https://github.com/virmani11kartik/learning-in-robotics-6500','_blank')">
+           onclick="window.open('https://github.com/virmani11kartik/machine_perception','_blank')">
         <div class="project-header">
-          <h3>Neural Radiance Fields (NeRF)</h3>
+          <h3>Machine Perception and Neural Radiance Fields</h3>
         </div>
         <p>
-          Implemented NeRF in PyTorch for novel-view synthesis with positional encoding,
+          Perspective Projection & 3D Reprojection and Implemented NeRF in PyTorch for novel-view synthesis with positional encoding,
           hierarchical sampling, and PSNR/SSIM evaluation.
         </p>
         <div class="project-tech">
