--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             <div class="projects-grid">
                 <!-- Project 1: RL Drones -->
                 <div class="project-card" data-category="learning research" onclick="window.open('https://github.com/virmani11kartik/RL_uav_ws','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/rl-drones.jpeg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -457,7 +457,7 @@
 
                 <!-- Project 2: SICK LiDAR -->
                 <div class="project-card" data-category="perception research" onclick="window.open('https://github.com/virmani11kartik/flex_bot','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/lidar-challenge.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -486,7 +486,7 @@
 
                 <!-- Project 3: Bimanual Manipulation -->
                 <div class="project-card" data-category="learning research" onclick="window.open('https://github.com/virmani11kartik/bimanual-manipulation','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/bimanual-manipulation.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -513,7 +513,7 @@
 
                 <!-- Project 4: HAMR -->
                 <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/HAMR_Humanoid','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -541,7 +541,7 @@
 
                 <!-- Project 5: Quadrotor Control -->
                 <div class="project-card" data-category="control perception" onclick="window.open('https://github.com/virmani11kartik/meam620-virmani11kartik','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -568,7 +568,7 @@
 
                 <!-- Project 6: Grounded SLAM -->
                 <div class="project-card" data-category="perception learning" onclick="window.open('https://github.com/virmani11kartik/Visual-SLAM-DOF-w-GDino','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -595,7 +595,7 @@
 
                 <!-- Project 7: SVG-MPPI -->
                 <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/mppi_f1tenth_team4','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -623,7 +623,7 @@
 
                 <!-- Project 8: UKF State Estimation -->
                 <div class="project-card" data-category="perception control" onclick="window.open('https://github.com/virmani11kartik/learning-in-robotics-6500','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -650,7 +650,7 @@
 
                 <!-- Project 9: NeRF -->
                 <div class="project-card" data-category="learning perception" onclick="window.open('https://github.com/virmani11kartik/machine_perception','_blank')">
-                    <div class="project-image">
+                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -809,13 +809,13 @@
                     </div>
 
                     <div class="contact-methods">
-                        <a href="mailto:kvirmani@seas.upenn.edu" class="contact-method">
+                        <a href="/cdn-cgi/l/email-protection#0d667b647f606c63644d7e686c7e23787d68636323686978" class="contact-method">
                             <div class="method-icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <div class="method-content">
                                 <h4>Email</h4>
-                                <p>kvirmani@seas.upenn.edu</p>
+                                <p><span class="__cf_email__" data-cfemail="c4afb2adb6a9a5aaad84b7a1a5b7eab1b4a1aaaaeaa1a0b1">[email&#160;protected]</span></p>
                             </div>
                         </a>
 
@@ -924,7 +924,7 @@
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <ul>
-                            <li><a href="mailto:kvirmani@seas.upenn.edu">Email</a></li>
+                            <li><a href="/cdn-cgi/l/email-protection#f19a8798839c909f98b182949082df8481949f9fdf949584">Email</a></li>
                             <li><a href="tel:+12154528308">Phone</a></li>
                             <li><a href="assets/Kartik_Virmani_Resume.pdf" download>Resume</a></li>
                         </ul>
@@ -933,12 +933,4 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Kartik Virmani. All rights reserved.</p>
-                <p>Designed with <i class="fas fa-heart"></i> for robotics</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                <p>&copy; 2025 Kartik Virmani. All rights reserve
