--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                 <!-- Project 2: SICK LiDAR -->
                 <div class="project-card" data-category="perception research" onclick="window.open('https://github.com/virmani11kartik/flex_bot','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/lidar-challenge.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/lidar-challenge.jpeg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -512,8 +512,8 @@
                 </div>
 
                 <!-- Project 4: HAMR -->
-                <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/HAMR_Humanoid','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/HAMR_COMPA_Holonomic_offroad_robot','_blank')">
+                    <div class="project-image" style="background-image: url('assets/projects/compa.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
